<resources>
    <string name="app_name">Social Communication</string>
    <string name="typeface_regular">fonts/quicksand/quicksand_regular.ttf</string>
    <string name="typeface_medium">fonts/quicksand/quicksand_medium.ttf</string>
    <string name="typeface_bold">fonts/quicksand/quicksand_bold.ttf</string>
    <string name="typeface_semibold">fonts/quicksand/quicksand_semibold.ttf</string>
    <string name="typeface_light">fonts/quicksand/quicksand_light.ttf</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_login_email_input">Email hoặc số điện thoại</string>
    <string name="text_login_password_input">Password</string>
    <string name="text_forgot_password">Forgot your password</string>
    <string name="text_register">Đăng ký</string>
    <string name="text_full_name">Họ tên (*)</string>
    <string name="text_birthday">Ngày sinh</string>
    <string name="text_gender">Giới tính</string>
    <string name="text_gender_man">Nam</string>
    <string name="text_gender_female">Nữ</string>
    <string name="text_phone_number">Số điện thoại (*)</string>
    <string name="text_email">Email (*)</string>
    <string name="text_create_account">Tạo mới</string>
    <string name="text_chat">Chat</string>
    <string name="text_find">Tìm kiếm</string>
    <string name="text_contact">Danh bạ</string>
    <string name="text_input_messenger">Nhập tin nhắn...</string>
    <string name="text_no_connect_internet">Không có kết nối mạng</string>
    <string name="text_login_fail">Đăng nhập thất bại</string>
    <string name="text_register_fail">Đăng ký thất bại</string>
    <string name="text_login_with_gmail">Đăng nhập bằng Gmail</string>
    <string name="text_me">Tôi</string>
    <string name="text_user_profile">Tài khoản</string>
    <string name="text_edit_profile">Chỉnh sửa thông tin</string>
    <string name="text_support">Trợ giúp</string>
    <string name="text_policy">Chính sách</string>
    <string name="share_app">Chia sẻ ứng dụng</string>
    <string name="intro_app">Giới thiệu ứng dụng</string>
    <string name="text_logout">Đăng xuất</string>
    <string name="text_info">Thông tin</string>
    <string name="text_save">Lưu</string>
    <string name="text_save_info">Lưu thông tin</string>
    <string name="value_id_token">645311262663-98v2akpcvogk48j5oh4m03lq6kse7flm.apps.googleusercontent.com</string>
    <string name="text_token_fail">Không lấy được token</string>
    <string name="text_user_name_empty">Tên người dùng không được bỏ trống</string>
    <string name="text_email_empty">Email không thể để trống</string>
    <string name="text_password_empty">Không thể để trống mật khẩu</string>
    <string name="text_input_email_forgot_password">Nhập email để lấy lại mật khẩu (*)</string>
    <string name="text_confirm">Đồng ý</string>
    <string name="text_send_code">Gửi đi</string>
    <string name="text_cancel">Hủy</string>
    <string name="text_empty_data_chat">Chưa có cuộc trò chuyện</string>
    <string name="text_empty_data_contact">Chưa có liên hệ nào</string>
    <string name="text_open_contact">Mở danh bạ</string>
    <string name="text_edit_name">Sửa tên người dùng</string>
    <string name="text_input_name">Nhập tên</string>
    <string name="text_accept">Xác nhận</string>
    <string name="text_change_password">Đổi mật khẩu</string>
    <string name="text_input_old_password">Nhập mật khẩu hiện tại (*)</string>
    <string name="text_input_new_password">Nhập mật khẩu mới (*)</string>
    <string name="text_input_renew_password">Nhập lại mật khẩu mới (*)</string>
    <string name="text_edit_avatar">Thay đổi ảnh đại diện</string>
    <string name="text_change_image_galery">Mở thư viện ảnh</string>
    <string name="text_change_image_camera">Mở Camera</string>
    <string name="text_update_phone_number"><u>Vui lòng cập nhật số điện thoại</u></string>
</resources>