<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="24dp"
        android:background="@drawable/bg_white_corner_16"
        android:paddingBottom="30dp">

        <com.social.socialcommunication.custom_view.CustomTextviewFont
            android:id="@+id/tvTitlePopup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="@string/text_forgot_password"
            android:textColor="@color/text_color_black3"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/tvTitlePopup" />

        <com.social.socialcommunication.custom_view.CustomTextviewFont
            android:id="@+id/tvContentPopup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="24dp"
            android:text="@string/text_input_email_forgot_password"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <com.social.socialcommunication.custom_view.CustomEdittextFont
            android:id="@+id/tvInputEmailForgotPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/gray1"
            android:hint="Nhập Email"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:paddingRight="8dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/tvContentPopup"
            app:layout_constraintStart_toStartOf="@id/tvContentPopup"
            app:layout_constraintTop_toBottomOf="@id/tvContentPopup" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/tvInputEmailForgotPass">

            <com.social.socialcommunication.custom_view.CustomButtonFont
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_input_gray2_rd_34"
                android:outlineProvider="none"
                android:text="@string/text_cancel"
                android:textAllCaps="false"
                android:textColor="@color/text_color_black3" />

            <com.social.socialcommunication.custom_view.CustomButtonFont
                android:id="@+id/btnAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:background="@drawable/bg_input_primary_rd_34"
                android:outlineProvider="none"
                android:text="@string/text_send_code"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>